# PythonGroupProject254-242

./: README.md  package-lock.json
BackEnd/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_seed.py  seed.sql
BackEnd/alembic/: env.py
BackEnd/alembic/versions/: 20260427_0001_create_buildings_and_facilities.py  20260427_0001_create_users.py  20260501_0001_ensure_temperature_building_unique.py  20260501_0002_remove_legacy_temperature_scope_columns.py  39373da1e99f_.py
BackEnd/src/: config.py  index.py
BackEnd/src/controllers/: temperature_controller.py
BackEnd/src/controllers/buildings/: building_controller.py
BackEnd/src/controllers/facilities/: facility_controller.py
BackEnd/src/controllers/health/: health_controller.py
BackEnd/src/controllers/users/: user_controller.py
BackEnd/src/db/: index.py
BackEnd/src/db/schema/: index.py
BackEnd/src/middlewares/: auth_middleware.py  cors.py
BackEnd/src/repo/buildings/: building_repo.py
BackEnd/src/repo/facilities/: facility_repo.py
BackEnd/src/repo/temperatures/: temperature_repo.py
BackEnd/src/repo/users/: user_repo.py
BackEnd/src/routes/: index.py  temperature_routes.py
BackEnd/src/routes/buildings/: building_routes.py
BackEnd/src/routes/facilities/: facility_routes.py
BackEnd/src/routes/health/: health_routes.py
BackEnd/src/routes/users/: user_routes.py
BackEnd/src/schemas/: building.py  facility.py  temperature.py
BackEnd/src/services/users/: user_service.py
BackEnd/src/utils/: generate_id.py  jwt.py  password.py  weather.py
(+42 files in other folders)
