[project]
name = "clean-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend using clean architecture, SQLAlchemy, and PostgreSQL."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "email-validator>=2.2.0",
    "fastapi>=0.112.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
